Now the user can create an account, the account will be registered in the dataBase. The password will not be stored in clear, it will be passed into an Hash before going to database. The user cannot connect for now but it will be added. modified:   class/Main.class new file:   class/controller/Controller.class new file:   class/controller/ControllerConnectionPage.class modified:   class/dao/DatabaseConnection.class new file:   class/dao/PasswordUtil.class new file:   class/data/UserService.class new file:   class/data/Utilisateur.class modified:   class/view/ConnectionPage.class new file:   class/view/InscriptionPage.class modified:   src/Main.java new file:   src/controller/Controller.java deleted:    src/controller/ControllerMainPage.java modified:   src/model/dao/DatabaseConnection.java new file:   src/model/dao/PasswordUtil.java new file:   src/model/data/UserService.java new file:   src/model/data/Utilisateur.java modified:   src/view/ConnectionPage.java new file:   src/view/InscriptionPage.java deleted:    ws/logo_bretagne.png modified:   ws/testJDBC.bat